Fixed form visibility in photo load. Added photo loader spinner

--- a/public/stylesheets/friskyhands/postings/post_it.css
+++ b/public/stylesheets/friskyhands/postings/post_it.css
@@ -30,5 +30,12 @@
 }
 
 .wave .post_it p.body {
-    width: 100%
+    width: 100%;
+    clear: both;
+}
+
+.wave .post_it .spinner {
+    position: absolute;
+    top: 60px;
+    left: 84px;
 }
